add logout(incomplete)